# ai-ecosystem-workspace-

./: .gitignore  README.md  compose.yml  docker_containers.html  docker_containers.txt  labelstudio_http_status.txt  postgres_students_demo.txt  students_demo.sql
backend/: .gitignore  db.py  label_studio_client.py  pyproject.toml  sandbox.py  sandbox_minio.py  test_logging.py  test_my_photo_versioning.py  test_postgres.py  worker_settings.py
backend/core/: config.py
diagrams/: labelstudio_arch.md  overviews.drawio
storage/: readme.md
utils/: logging_utils.py
